# walletd

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  MAINTAINER-FAQ.md  README.md  README_ORIGINAL.md  RELEASES.md  UPGRADING.md  add_base_erc20.sh  add_erc20.patch  add_erc20_to_menu.sh  btc_menu_header.txt  clippy_errors.txt  dfx.json  ethclient.rs  fix_case7.sh  fix_case7_final.sh  fix_main_erc20.sh  rustfmt.toml  temp_signature.txt  walletd-cli  walletd_config_updated.json  walletd_icp_api.did
bip39/: .gitignore  Cargo.toml
bip39/examples/: bip39_basic.rs  bip39_restore.rs  restore.rs
bip39/examples/basic/: Cargo.toml
bip39/examples/import/: Cargo.toml
bip39/src/: error.rs  errors.rs  language.rs  lib.rs  mnemonic.rs  mnemonic_type.rs
bitcoin/: Cargo.toml
bitcoin/examples/: basic.rs
bitcoin/src/: bitcoin_address.rs  bitcoin_amount.rs  bitcoin_wallet.rs  blockstream.rs  error.rs  lib.rs
coins/: .env.hedera  Cargo.toml
coins/base/: Cargo.toml
coins/base/src/: config.rs  error.rs  lib.rs  rpc.rs  transaction.rs  wallet.rs
coins/bitcoin/: Cargo.toml  README.md
coins/bitcoin/examples/: basic.rs  bitcoin_enterprise.rs  bitcoin_usage.rs  btc_quickstart_guide.rs  connecting_mempool_space.rs  lightning_and_swaps.rs  test_bitcoin.rs
coins/core/: Cargo.toml  README.md
coins/erc20/: Cargo.toml
coins/ethereum/: Cargo.toml  README.md
coins/hedera/: .gitignore  Cargo.toml  Cargo.toml.backup
coins/icp/: CANISTER_SDK_README.md  Cargo.toml  Cargo.toml.backup  Cargo.toml.test  Cargo.toml.with_other_chains  DELIVERABLES.md  DEVELOPER_GUIDE.md  FINAL_ICP_STATUS.md  ICP_INTEGRATION_COMPLETE.md  ICP_INTEGRATION_FINAL.md  ICP_QUICK_REFERENCE.md  ICP_QUICK_START.md  ICP_SDK_COMPLETE.md  PHASE1_COMPLETE.md  PHASE1_HANDOFF.md  PHASE1_STATUS.txt  PHASE2_COMPLETE.md  PHASE2_DELIVERABLES.md  PHASE2_PLAN.md  PHASE2_PROGRESS.md  PHASE2_STATUS.md  PHASE2_USAGE_GUIDE.md  PHASE3_COMPLETE.md  PHASE3_FINAL_DOCUMENTATION.md  PHASE3_IMPLEMENTATION.md  PHASE3_OVERVIEW.md  PHASE3_PROGRESS.md  PHASE3_STATUS.md  PROJECT_COMPLETE.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  SDK_SUMMARY.md  SECURITY_AUDIT.md  TODO_PHASE1.md  apply_all_fixes.sh  celebrate_completion.sh  celebrate_sdk_complete.sh  check_errors.sh  create_icp_demo.sh  (+52 more)
coins/karl_solana/: Cargo.toml
coins/model/: Cargo.toml
coins/monero/: Cargo.toml
coins/solana/: Cargo.toml
coins/src/: crypto_coin.rs  crypto_wallet.rs  lib.rs
coins/walletd_erc20/: Cargo.toml
crates/walletd_icp_api/: Cargo.toml  Cargo.toml~  dfx.json  walletd_icp_api.did
ethereum/: Cargo.toml  README.md  working-docs-erc20.md  working-docs-erc721-nfts.md
ethereum/examples/: basic.rs  get_accounts_and_balances.rs  get_block_data.rs  get_network_information.rs  get_smart_contract_transactions.rs  instantiate_wallet.rs  main.rs  send_funds.rs
ethereum/src/: blockchain_client.rs  error.rs  ethclient.rs  ethereum_address.rs  ethereum_amount.rs  ethereum_wallet.rs  lib.rs  main.rs
hd_key/: Cargo.toml  README.md
hd_key/examples/: basic.rs  hd_key_basic.rs
hd_key/src/: derive_path.rs  error.rs  hd_key.rs  lib.rs  slip44.rs
hd_keys/: Cargo.toml
hd_keys/src/: bip32.rs  bip44.rs  bip49.rs  bip84.rs  hd_keypair.rs  lib.rs
key_manager/hd_key/: Cargo.toml  README.md
mnemonics/bip39/: .gitignore  Cargo.toml  README.md
mnemonics/core/: Cargo.toml  README.md
mnemonics/monero/: Cargo.toml
model/: Cargo.toml
model/src/: blockchain_connector.rs  crypto_address.rs  crypto_amount.rs  crypto_coin.rs  crypto_wallet.rs  error.rs  lib.rs  seed.rs
monero/: .gitignore  Cargo.toml
monero/examples/: basic.rs  bulletproof_plus.rs  monero_basic.rs  monero_restore.rs  private_testnet.rs  restore.rs  transfer.rs  varint.rs
monero/src/: address.rs  errors.rs  fee_utils.rs  key_image.rs  language.rs  lib.rs  mix_outs.rs  mnemonic.rs  mnemonic_type.rs  monero_amount.rs  monero_lws.rs  monero_private_keys.rs  monero_public_keys.rs  monero_serialize.rs  monero_wallet.rs  network.rs  payment_id.rs  private_key.rs  public_key.rs  rct_types.rs  transaction.rs  varint.rs
monero_mnemonic/: .gitignore  Cargo.toml
rates/: Cargo.toml
rates/examples/: crypto_rates.rs  fiat_rates.rs
rates/src/: lib.rs
walletd/: Cargo.toml
walletd-prasaga-avio/: .gitignore  Cargo.toml  PHASE_2_REPORT.md  PROJECT_STATUS.md  QUICK_REFERENCE.md  README.md  final_test.sh  integrate.sh  prasaga_config.json  prepare_release.sh  test_walletd_cli.sh  walletd_config.toml  walletd_prasaga_module.sh
walletd-prasaga-avio/benches/: transactions.rs
walletd-prasaga-avio/examples/: network_usage.rs  object_ops.rs  transfer.rs
walletd-prasaga-avio/prasaga-deploy/: prasaga
walletd-prasaga-avio/src/: lib.rs  walletd_integration.rs
walletd-prasaga-avio/tests/: integration_suite.rs  integration_test.rs
walletd/examples/: sample.rs  using_keystore_keymanager.rs  wd_quickstart_guide.rs  workflow.rs
walletd/src/: crypto_coin.rs  display.rs  error.rs  key_manager.rs  key_pair.rs  keypair.rs  keystore.rs  lib.rs  prelude.rs
walletd/tests/: key_manager_tests.rs  test_keypair.rs  test_keypair_builder.rs
walletd_icp_cli/: Cargo.toml  QUICKSTART.md  README.md  fix_cargo.py  fix_main.py  update_config.py  update_default_config.py  update_init_hedera.py  walletd_config.json
walletd_icp_cli/src/: avio_constants.rs  base_menu.rs  btc_functions.rs  btc_lightning_fix.rs  btc_lightning_menu.rs  btc_lightning_menu_update.rs  btc_menu.rs  btc_menu.rs.backup  btc_real.rs  btc_send_real.rs  btc_simple.rs  btc_voltage_config.rs  cli_options.rs  cli_options.rs.backup  config.rs  config_modes.rs  config_testnet.rs  config_update.rs  display.rs  erc20_menu.rs  eth_functions.rs  eth_menu.rs  eth_menu_fix.rs  eth_send_real.rs  eth_simple.rs  hardware_wallet.rs  hbar_balance_check.rs  hbar_balance_real.rs  hbar_menu.rs  hbar_menu_faucet.rs  hbar_menu_faucet.rs.backup  hbar_menu_faucet_auto.rs  hbar_menu_reload_fix.rs  hbar_menu_update.rs  hbar_menu_with_reload.rs  hbar_reload_option.rs  hbar_send_real.rs  hbar_send_real_fixed.rs  hbar_send_testnet.rs  hedera_account_pool.rs  (+75 more)
(+413 files in other folders)
