[package]
name = "walletd"
version = "0.1.0"
edition = "2021"

[lib]
name = "walletd"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.68"
hex = { version = "0.4.2" }
walletd_bip39 = {path = "./mnemonics/bip39"}
walletd_mnemonic_model = {path = "./mnemonics/model"}
walletd_coin_model = {path = "./coins/model"}
walletd_bitcoin = {path = "./coins/bitcoin"}
walletd_ethereum = {path = "./coins/ethereum"}
walletd_hd_key = {path = "./mnemonics/hd_key"}
web3 = "0.18.0"
