[package]
name = "walletd"
version = "0.2.0"
authors = ["The WalletD Team"]
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
hedera = "0.28.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bdk = { version = "0.28.2", features = ["all-keys"] }
hex = { version = "0.4.2" }

[workspace]
members = [
    "coins/bitcoin",
    "coins/ethereum",
    "coins/monero",
    "coins/hedera",
    "key_manager/hd_key",
    "mnemonics/core"
]
