[workspace]
members = [
    "walletd_icp_cli",
    "coins/bitcoin",
    "coins/monero",
    #"coins/solana",
    "coins/ethereum",
    "coins/hedera",
    "coins/icp",
    "coins/walletd_erc20",
    "key_manager/hd_key",
    "mnemonics/core",
    "mnemonics/monero",
    "rates",
    "crates/walletd-core",
    "crates/walletd_icp_api",
    "coins/base",
]
resolver = "2"

[workspace.dependencies]
ic-agent = "0.34"
ic-utils = "0.34"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
serde-aux = "4.5.0"
clap = { version = "4.5.20", features = ["derive"] }
ic-cdk = "0.13.6"
candid = "0.10.10"
ic-types = "0.7.0"
ic-ledger-types = "0.10.0"
ed25519-dalek = "2.1.1"
rand = "0.8.5"
hex = "0.4.3"
sha2 = "0.10.8"
bip32 = "0.5.2"
tokio = { version = "1.40.0", features = ["full"] }
reqwest = { version = "0.12.8", features = ["json", "rustls-tls"] }
base64 = "0.22.1"
anyhow = "1.0.92"
log = "0.4.22"
aes-gcm = "0.10.3"
pbkdf2 = "0.12.2"
async-trait = "0.1.83"
thiserror = "1.0.66"
monero = "0.21.0"
curve25519-dalek = "4.1.3"
hmac = "0.12.1"
zeroize = { version = "1.8", features = ["derive"] }
walletd = { git = "https://github.com/walletd/walletd", branch = "main" }
walletd_hd_key = { path = "key_manager/hd_key", version = "0.2.0" }
base58 = "0.2"
ripemd = "0.1"
secp256k1 = "0.27"

[profile.release]
opt-level = 3
