[package]
name = "walletd_bitcoin"
version = "0.1.0"
edition = "2021"

[lib]
name = "walletd_bitcoin"
path = "src/lib.rs"

[dev-dependencies]
mockito = "0.31.1"

[dependencies]

walletd_coin_model = {path = "../model/"}
walletd_bip39 = {path = "../../mnemonics/bip39"}
walletd_hd_key = {path = "../../mnemonics/hd_key"}

anyhow = "1.0.68"
async-trait = "0.1.60"
base58 = { version = "0.2.0" }
bech32 = { version = "0.9.1"}
bitcoin = "0.29.2"
bitcoin_hashes = "0.11.0"
bitcoincore-rpc = "0.16.0"
chrono = "0.4.24"
hex = "0.4.3"
log = "0.4.17"
reqwest = { version = "0.11", features = ["blocking", "json"] }
ripemd = "0.1.3"
prettytable-rs = "0.10.0"
secp256k1 = {version = "0.25.0", features = ["rand-std"]}
sha2 = { version = "0.10.6", default-features = false }
serde_json = "1.0"
serde = "1.0.148"
signature = "1.6.4"

