[package]
name = "walletd_ethereum"
version = "0.1.0"
edition = "2021"

[lib]
name = "walletd_ethereum"
path = "src/lib.rs"

[dependencies]

walletd_bip39 = {path = "../../mnemonics/bip39"}
walletd_coin_model = {path = "../model/"}
walletd_hd_key = {path = "../../mnemonics/hd_key"}

async-trait = "0.1.60"
hex = "0.4.3"
keccak-hash = "0.10.0"
secp256k1 = { version = "0.21.0", features = ["rand-std"] }
tiny-keccak = { version = "2.0.2" }
tokio = { version = "1", features = ["full"] }
web3 = "0.18.0"
hex-literal = "0.3"
thiserror = "1.0.38"
prettytable-rs = "0.10.0"
