[package]
name = "walletd_hd_keys"
version = "0.1.0"
edition = "2021"

[lib]
name = "walletd_hd_keys"
path = "src/lib.rs"

[dependencies]

walletd_coins = {path = "../coins"}

base58 = { version = "0.1" }
hmac = { version = "0.7.0" }
libsecp256k1 = { version = "0.3.5", default-features = false, features = ["hmac"] }
ripemd160 = { version = "0.8", default-features = false }
hex = { version = "0.4.2" }
sha2 = { version = "0.8", default-features = false }