[package]
name = "walletd_coin_model"
version = "0.1.0"
edition = "2021"

[lib]
name = "walletd_coin_model"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.68"
async-trait = "0.1.6"
sha2 = { version = "0.10.6", default-features = false }
base58 = { version = "0.2.0" }
hex = { version = "0.4.2" }
walletd_hd_key = {path = "../../mnemonics/hd_key"}
thiserror = "1.0.40"