[package]
name = "walletd_coin_model"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["The WalletD Team"]
description = "WalletD coin model"
homepage = "https://walletd.org/"
repository = "https://github.com/walletd/walletd"
readme = "README.md"
categories = ["cryptography::cryptocurrencies"]

[lib]
name = "walletd_coin_model"
path = "src/lib.rs"

[dependencies]

walletd_hd_key = {path = "../../mnemonics/hd_key"}
walletd_mnemonic_model = {path = "../../mnemonics/model"}

anyhow = "1.0.68"
async-trait = "0.1.6"
sha2 = { version = "0.10.6", default-features = false }
base58 = { version = "0.2.0" }
hex = { version = "0.4.2" }
thiserror = "1.0.40"