[package]
name = "walletd_monero_mnemonic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walletd_mnemonics = {path = "../"}

crc = { version = "1.8.1" }
curve25519-dalek = { version = "2.1.0" }
rand = { version = "0.7" }
hex = { version = "0.4.2" }