[package]
name = "walletd-prasaga-avio"
version = "0.1.0"
edition = "2021"
authors = ["Slaz Holdings Ltd <dev@slaz.com>"]
license = "MIT OR Apache-2.0"
description = "Prasaga Avio chain adapter for WalletD multi-chain SDK"
repository = "https://github.com/slaz/walletd-prasaga-avio"
keywords = ["blockchain", "prasaga", "avio", "walletd", "sagachain"]
categories = ["cryptography::cryptocurrencies"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
bincode = "1.3"

# HTTP/WebSocket clients
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
futures = "0.3"

# Cryptography - Fixed ed25519-dalek features
secp256k1 = { version = "0.28", features = ["recovery", "rand-std"] }
ed25519-dalek = { version = "2.1", features = ["serde", "rand_core"] }
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1.5"
hmac = "0.12"
pbkdf2 = "0.12"

# Key management
bip39 = "2.0"
bip32 = "0.5"
bs58 = "0.5"
bech32 = "0.9"
hex = "0.4"

# Database & Caching
rocksdb = { version = "0.21", optional = true }
redis = { version = "0.24", features = ["tokio-comp"], optional = true }
lru = "0.12"

# Logging & Metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = { version = "0.13", optional = true }
metrics = "0.21"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utils
once_cell = "1.19"
parking_lot = "0.12"
dashmap = "5.5"
bytes = "1.5"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"

# Additional dependencies for missing functionality
dotenv = "0.15"
rand = "0.8"

# Testing
mockito = { version = "1.2", optional = true }
proptest = { version = "1.4", optional = true }
criterion = { version = "0.5", optional = true }

[dev-dependencies]
mockito = "1.2"
proptest = "1.4"
criterion = "0.5"
tempfile = "3.8"
pretty_assertions = "1.4"

[features]
default = ["indexer"]
indexer = ["rocksdb"]
metrics = ["prometheus"]
testing = ["mockito", "proptest", "criterion"]
full = ["indexer", "metrics", "redis"]

[[bench]]
name = "transactions"
harness = false

[[example]]
name = "transfer"
path = "examples/transfer.rs"

[[example]]
name = "object_ops"
path = "examples/object_ops.rs"

[[bin]]
name = "prasaga_cli"
path = "src/bin/prasaga_cli.rs"
