[package]
name = "walletd"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["The WalletD Team"]
description = "The walletd library"
homepage = "https://walletd.org/"
repository = "https://github.com/walletd/walletd"
readme = "../README.md"
categories = ["cryptography::cryptocurrencies"]

[lib]
name = "walletd"
path = "src/lib.rs"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = "1.23.0"

[dependencies]

walletd_bip39 = {path = "../mnemonics/bip39", version="0.2"}
walletd_mnemonics_core = {path = "../mnemonics/core", version="0.2"}
walletd_coin_core = {path = "../coins/core", version="0.2"}
walletd_bitcoin = {path = "../coins/bitcoin", version="0.2"}
walletd_ethereum = {path = "../coins/ethereum", version="0.2"}
walletd_hd_key = {path = "../key_manager/hd_key", version="0.2"}

anyhow = "1.0.68"
chacha20poly1305 = "0.10.1"
hex = { version = "0.4.2" }
rand = "0.8.5"
rust-crypto = "0.2.36"
thiserror = "1.0.40"