[package]
name = "walletd_icp_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "walletd-icp-cli"
path = "src/main.rs"

[dependencies]
walletd_base = { path = "../coins/base" }
walletd_erc20 = { path = "../coins/erc20" }
dotenvy = "0.15"
ed25519-dalek = "1.0"
sha2 = "0.10"
bs58 = "0.4"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
cfonts = "1"
walletd_icp = { path = "../coins/icp" }
walletd_bitcoin = { path = "../coins/bitcoin" }
walletd_ethereum = { path = "../coins/ethereum" }
walletd_solana = { path = "../coins/solana" }
walletd_monero = { path = "../coins/monero" }
walletd_hedera = { path = "../coins/hedera" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Swap functionality
ethers = "2.0"
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = "0.4"
hex = "0.4"
rand = "0.8"
async-trait = "0.1"
bitcoin = "0.31"
base64 = "0.21"

# ICP dependencies
candid = "0.10"
ic-agent = { version = "0.31", features = ["pem", "reqwest"] }
ic-ledger-types = "0.9"
ring = "0.17"

# Additional dependencies
once_cell = "1.19"
lazy_static = "1.4"

[dev-dependencies]
mockito = "0.31"

# Additional blockchain dependencies
chrono = "0.4"
hedera = "0.28.0"

[[bin]]
name = "hedera_faucet"
path = "src/bin/hedera_faucet.rs"

