[package]
name = "walletd_base"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
ethers = "2.0"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
hex = "0.4"

# Cryptography
secp256k1 = { version = "0.27", features = ["recovery"] }
sha3 = "0.10"

# HD wallet support
bip39 = "2.0"
bip32 = "0.5"

# HTTP client for RPC
reqwest = { version = "0.11", features = ["json"] }

# Utilities
rand = "0.8"
async-trait = "0.1"
log = "0.4"
