[package]
name = "walletd_bitcoin"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["The WalletD Team"]
description = "Bitcoin walletd library"
homepage = "https://walletd.org/"
repository = "https://github.com/walletd/walletd"
readme = "README.md"
categories = ["cryptography::cryptocurrencies"]

[lib]
name = "walletd_bitcoin"
path = "src/lib.rs"


[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tokio-test = "0.4.2"

[dev-dependencies]
mockito = "1.0.2"

[dependencies]
walletd_mnemonics_core = { path = "../../mnemonics/core/", version = "0.2" }
walletd_hd_key = { path = "../../key_manager/hd_key", version = "0.2" }
bdk = { version = "0.28.2" }
anyhow = "1.0.68"
async-trait = "0.1.60"
base58 = { version = "0.2.0" }
bitcoin = "0.30.0"
bitcoin_hashes = "0.12.0"
time = { version = "0.3", features = ["macros", "formatting"] }
hex = "0.4.3"
log = "0.4.17"
reqwest = { version = "0.11.18", features = ["json"] }
ripemd = "0.1.3"
secp256k1 = { version = "0.27.0", features = ["rand-std"] }
sha2 = { version = "0.10.6", default-features = false }
serde_json = "1.0"
serde = "1.0.148"
signature = "1.6.4"
thiserror = "1.0.40"
zeroize = { version = "1.6.0", features = ["zeroize_derive"] }
