[package]
name = "walletd_bitcoin"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["The WalletD Team"]
description = "Bitcoin walletd library"
homepage = "https://walletd.org/"
repository = "https://github.com/walletd/walletd"
readme = "README.md"
categories = ["cryptography::cryptocurrencies"]

[lib]
name = "walletd_bitcoin"
path = "src/lib.rs"

[dependencies]
walletd_hd_key = { path = "../../key_manager/hd_key", version = "0.2" }
bdk = { version = "0.28.2" }
thiserror = "1.0.40"
tokio = { version = "1.0", features = ["full"] }
