[package]
name = "walletd_coin_core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["The WalletD Team"]
description = "WalletD coin core"
homepage = "https://walletd.org/"
repository = "https://github.com/walletd/walletd"
readme = "README.md"
categories = ["cryptography::cryptocurrencies"]

[lib]
name = "walletd_coin_core"
path = "src/lib.rs"

[dependencies]

walletd_hd_key = {path = "../../mnemonics/hd_key", version="0.1"}
walletd_mnemonics_core = {path = "../../mnemonics/core", version="0.1"}

anyhow = "1.0.68"
async-trait = "0.1.6"
sha2 = { version = "0.10.6", default-features = false }
base58 = { version = "0.2.0" }
hex = { version = "0.4.2" }
thiserror = "1.0.40"