[package]
name = "walletd_ethereum"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["The WalletD Team"]
description = "Ethereum walletd library"
homepage = "https://walletd.org/"
repository = "https://github.com/walletd/walletd"
readme = "README.md"
categories = ["cryptography::cryptocurrencies"]

[lib]
name = "walletd_ethereum"
path = "src/lib.rs"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }
web3 = "0.18.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web3 = { version = "0.18.0", optional = true, default-features = false, features = ["wasm", "http-rustls-tls"] }

[dependencies]
walletd_bip39 = {path = "../../mnemonics/bip39", version="0.2"}
walletd_coin_core = {path = "../core/", version="0.2"}
walletd_hd_key = {path = "../../mnemonics/hd_key", version="0.2"}

async-trait = "0.1.60"
hex = "0.4.3"
hex-literal = "0.3"
keccak-hash = "0.10.0"
log = "0.4.17"
secp256k1 = { version = "0.21.0", features = ["rand-std"] }
thiserror = "1.0.38"
tiny-keccak = { version = "2.0.2" }
zeroize = { version = "1.6.0", features = ["zeroize_derive"] }


