[package]
name = "walletd_ethereum"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["The WalletD Team"]
description = "Ethereum walletd library"
homepage = "https://walletd.org/"
repository = "https://github.com/walletd/walletd"
readme = "README.md"
categories = ["cryptography::cryptocurrencies"]

[lib]
name = "walletd_ethereum"
path = "src/lib.rs"

[dependencies]
bdk = { version = "0.28.2", features = ["all-keys"] }
hex = "0.4.3"
hex-literal = "0.3"
thiserror = "1.0.38"
tiny-keccak = { version = "2.0.2" }

# for Ethereum
ethers = { version = "2.0.7", features = [
    "rustls",
    "ws",
    "ipc",
    "ethers-solc",
] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.130"  # Align with serde version