[package]
name = "walletd_icp"
version = "0.1.0"
edition = "2021"

[features]
default = []
production = [
    "rocksdb",
    "dashmap",
    "prometheus",
    "opentelemetry",
    "opentelemetry-prometheus",
    "zeroize",
    "parking_lot",
    "num_cpus",
]

[dependencies]
# Core ICP dependencies
ic-agent = "0.31.0"
candid = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
sha2 = "0.10"
rand = "0.8"
anyhow = "1.0"
thiserror = "1.0"
ring = "0.16"

# Wallet dependencies
bip39 = "2.0"
k256 = "0.13"
derivation-path = "0.2"
argon2 = "0.5"
chacha20poly1305 = "0.10"
ic-ledger-types = "0.9"
ic-utils = "0.31"
uuid = { version = "1.6", features = ["v4", "serde"] }
async-trait = "0.1"

# Production dependencies (optional)
rocksdb = { version = "0.21", optional = true }
dashmap = { version = "5.5", optional = true }
prometheus = { version = "0.13", optional = true }
opentelemetry = { version = "0.21", optional = true }
opentelemetry-prometheus = { version = "0.14", optional = true }
zeroize = { version = "1.7", features = ["derive"], optional = true }
parking_lot = { version = "0.12", optional = true }
num_cpus = { version = "1.16", optional = true }
futures = "0.3"
bincode = "1.3"
sha3 = "0.10"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
