[package]
name = "walletd_monero"
version = "0.1.0"
edition = "2021"

[lib]
name = "walletd_monero"
path = "src/lib.rs"

[dependencies]

walletd_coin_model = {path = "../model"}
walletd_monero_mnemonic = {path = "../../mnemonics/monero"}
walletd_hd_keys = {path = "../../hd_keys"}

anyhow = "1.0.68"
async-trait = "0.1.60"
base58-monero = { version = "1.0.0" }
curve25519-dalek = { version = "3.2.1" }
hex = { version = "0.4.2" }
hmac = { version = "0.12.1" }
secp256k1 = {version = "0.25.0", features = ["rand-std"]}
tiny-keccak = { version = "2.0.2" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
sha2 = { version = "0.10.6", default-features = false }
