[package]
name = "walletd_monero"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["The WalletD Team"]
description = "Monero walletd library"
homepage = "https://walletd.org/"
repository = "https://github.com/walletd/walletd"
readme = "README.md"
categories = ["cryptography::cryptocurrencies"]

[lib]
name = "walletd_monero"
path = "src/lib.rs"

[dependencies]
walletd_coin_core = {path = "../core"}
walletd_monero_mnemonic = {path = "../../mnemonics/monero"}
walletd_hd_key = {path = "../../mnemonics/hd_key"}

anyhow = "1.0.68"
async-trait = "0.1.60"
base58-monero = { version = "1.0.0" }
curve25519-dalek = { version = "3.2.1" }
dalek-ff-group = "0.1.4"
hex = { version = "0.4.2" }
hex-literal = "0.3.2"
hmac = { version = "0.12.1" }
lazy_static = "1.4.0"
monero-generators = "0.1.1"
multiexp = "0.2.0"
num = "0.4.0"
tiny-keccak = { version = "2.0.2" }
thiserror = "1.0.38"
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"
reqwest = { version = "0.11.16", features = ["json"] }
serde = {version = "1.0.148", features = ["derive"]}
serde-aux = "4.1.2"
serde_json = "1.0"
sha2 = { version = "0.10.6", default-features = false }
subtle = { version = "2", default-features = false }
zeroize = "1"

