[package]
name = "walletd_solana"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "walletd_solana"
#crate-type = ["cdylib", "lib"]
path = "src/lib.rs"

[dependencies]

solana-client = "1.16.8"
solana-sdk = "1.16.8"
#walletd_coin_core = { path = "../core/", version = "0.2" }
#walletd_mnemonics_core = { path = "../../mnemonics/core", version = "0.2" }
thiserror = "1.0.47"
tokio = "1.14.1"
