[package]
name = "walletd_hedera"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["The WalletD Team"]
description = "Hedera implementation for the walletd library"
homepage = "https://walletd.org/"
repository = "https://github.com/walletd/walletd"

[dependencies]
tokio = { version = "1.23.0", features = ["full"] }
anyhow = "1.0.68"
hedera = "0.28.0"
