[package]
name = "walletd_icp_api"
version = "0.1.0"
edition = "2021"
description = "Full ICP wallet integration for WalletD SDK"
license = "MIT OR Apache-2.0"
repository = "https://github.com/walletd"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
ic-cdk = { workspace = true }
candid = { workspace = true }
serde = { workspace = true }
ic-ledger-types = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
bincode = "1.3.3"
zeroize = "1.8.1"

[dev-dependencies]
tokio-test = "0.4"
tokio = { workspace = true, features = ["test-util"] }