[package]
name = "walletd_hd_key"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["The WalletD Team"]
description = "WalletD HD Key library for handling HD keys"
homepage = "https://walletd.org/"
repository = "https://github.com/walletd/walletd"
readme = "README.md"
categories = ["cryptography::cryptocurrencies"]

[lib]
name = "walletd_hd_key"
path = "src/lib.rs"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }

[dependencies]
walletd_mnemonics_core = { path = "../../mnemonics/core", version="0.2" }
base58 = { version = "0.2.0" }
hex = { version = "0.4.2" }
hmac = { version = "0.12.1" }
ripemd = { version = "0.1.3", default-features = false }
secp256k1 = { version = "0.27.0", features = ["rand-std"]}
sha2 = { version = "0.10.6", default-features = false }
slip44 = "0.1.4"
thiserror = "1.0.40"
