[package]
name = "walletd_hd_key"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["The WalletD Team"]
description = "HD key manager for WalletD"
homepage = "https://walletd.org/"
repository = "https://github.com/walletd/walletd"

[dependencies]
anyhow = "1.0.68"
ed25519-dalek = "2.0.0"
rand_core = "0.6.4"
secp256k1 = "0.22.0"
hmac = "0.12.0"
sha2 = "0.10.6"
ripemd = "0.1.3"  # Use the latest version available
thiserror = "1.0"
base58 = "0.2.0"
slip44 = "0.1.0"
hex = "0.4.3"

