[package]
name = "walletd_hd_key"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["The WalletD Team"]
description = "Hierarchical Deterministic Key Management for WalletD"
homepage = "https://walletd.org/"
repository = "https://github.com/walletd/walletd"
readme = "README.md"

[dependencies]
bip32 = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
walletd_mnemonics_core = { path = "../../mnemonics/core", version = "0.2" }
base58 = "0.2"
ripemd = "0.1"
secp256k1 = "0.27"
hex = { workspace = true }
serde = { workspace = true }