[package]
name = "walletd_monero_mnemonic"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["The WalletD Team"]
description = "A library for generating and restoring Monero mnemonic seeds"
homepage = "https://walletd.org/"
repository = "https://github.com/walletd/walletd"
readme = "README.md"
categories = ["cryptography::cryptocurrencies"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walletd_mnemonics_core = {path = "../core"}
aligned = "0.4.1"
crc = { version = "1.8.1" }
curve25519-dalek = { version = "2.1.0" }
enum-iterator = "1.2.0"
hex = { version = "0.4.2" }
rand = { version = "0.7" }
sha3 = "0.10.6"
thiserror = "1.0.39"
